--- a/src/.env.example
+++ b/src/.env.example
@@ -1,17 +1,20 @@
-APP_NAME=Laravel
+APP_NAME=Send4Test
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:9fmOnW997o8BoMZOwc7pI8Lsb9ywCqK8G6gqB2oj3uo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=172.19.0.2
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=send4test
+DB_USERNAME=send4user
+DB_PASSWORD=send4pass
+
+SHOPIFY_API_KEY=269a1ec67dfdd434dfc8622a0ed77768
+SHOPIFY_API_PASSWORD=4e788173c35d04421ab4793044be622f
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -19,7 +22,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=172.19.0.3
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
